unpackaged/main/default/objects/B2B_Settings__c/B2B_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to store global params for B2B CEGID Store</description>
    <label>B2B Settings</label>
</CustomObject>