unpackaged/main/default/objects/B2B_Settings__c/fields/AccessTokenClientID__c.field-meta.xml
<CustomField>
    <fullName>AccessTokenClientID__c</fullName>
    <label>Access Token Client ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>