unpackaged/main/default/objects/B2B_Settings__c/fields/AccessTokenClientSecret__c.field-meta.xml
<CustomField>
    <fullName>AccessTokenClientSecret__c</fullName>
    <label>Access Token Client Secret</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>