unpackaged/main/default/objects/B2B_Settings__c/fields/AccessTokenURL__c.field-meta.xml
<CustomField>
    <fullName>AccessTokenURL__c</fullName>
    <label>Access Token URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>