unpackaged/main/default/objects/B2B_Settings__c/fields/CommunityId__c.field-meta.xml
<CustomField>
    <fullName>CommunityId__c</fullName>
    <description>The id of the community. Used in SSO Auto provisioning.</description>
    <label>Community Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>