unpackaged/main/default/objects/B2B_Settings__c/fields/DefaultBuyerGroup__c.field-meta.xml
<CustomField>
    <fullName>DefaultBuyerGroup__c</fullName>
    <description>Default Buyer Group to assign Buyer account during auto-provisioning</description>
    <inlineHelpText>Default Buyer Group to assign Buyer account during auto-provisioning</inlineHelpText>
    <label>Default Buyer Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>