unpackaged/main/default/objects/B2B_Settings__c/fields/Dom__c.field-meta.xml
<CustomField>
    <fullName>Dom__c</fullName>
    <label>Dom</label>
    <type>TextArea</type>
</CustomField>