unpackaged/main/default/objects/B2B_Settings__c/fields/GetUnitaryProductSessionsURL__c.field-meta.xml
<CustomField>
    <fullName>GetUnitaryProductSessionsURL__c</fullName>
    <label>Get Unitary Product Sessions URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>