unpackaged/main/default/objects/B2B_Settings__c/fields/StoreDomain__c.field-meta.xml
<CustomField>
    <fullName>StoreDomain__c</fullName>
    <defaultValue>"https://store.cegid.com"</defaultValue>
    <label>Store domain</label>
    <type>Url</type>
</CustomField>