unpackaged/main/default/objects/B2B_Settings__c/fields/StoreLoginURL__c.field-meta.xml
<CustomField>
    <fullName>StoreLoginURL__c</fullName>
    <label>Store Login URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>