unpackaged/main/default/objects/B2B_Settings__c/fields/StripePublishableKey__c.field-meta.xml
<CustomField>
    <fullName>StripePublishableKey__c</fullName>
    <defaultValue>"pk_test_51J3G9THyPvQW0JfV0OddzUOOkYQM50uC8wzPfzckGqqCNVKVo4vJssOcNTZIRnksbloJZBHc4AIv2m1nEKU7TAeA00xLWtdquz"</defaultValue>
    <description>Populate with the value of the publishable key in the Stripe Dashboard</description>
    <inlineHelpText>Populate with the value of the publishable key in the Stripe Dashboard</inlineHelpText>
    <label>Stripe Publishable Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>