unpackaged/main/default/objects/B2B_Settings__c/fields/Tom__c.field-meta.xml
<CustomField>
    <fullName>Tom__c</fullName>
    <label>Tom</label>
    <type>TextArea</type>
</CustomField>